--- a/SomeCats/packages.config
+++ b/SomeCats/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="System.Interactive" version="3.2.0" targetFramework="net471" />
   <package id="WpfAnimatedGif" version="1.4.17" targetFramework="net471" />
 </packages>
